Style fix for overflowing content width in Home

--- a/src/Client/Styles/Components/_home.scss
+++ b/src/Client/Styles/Components/_home.scss
@@ -1,8 +1,7 @@
 @import '../vars.scss';
 
 .home-wrapper {
-    padding: 80px 5%;
-    justify-content: space-evenly;
+    padding: 80px 7%;
     
     .image-text {
         position: absolute;
